crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__eof_in_after_attribute_value_state.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<a a ='a'\"####)"
---
[
    Token {
        data: "a",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
