crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__equals_equals_equals_attribute.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<z ===>\"####)"
---
[
    Token {
        data: "z",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "=": Some(
                        (
                            "=",
                            Unquoted,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
